--- a/trabalhoGerenciaDeConfiguracao/css/style.css
+++ b/trabalhoGerenciaDeConfiguracao/css/style.css
@@ -245,3 +245,13 @@ table.table .avatar {
 .modal form label {
     font-weight: normal;
 }	
+
+.divisor{
+  width: 1px;
+  background: gray;
+  margin: 10px 15px;
+}
+
+#tabela-busca-cliente tr.selecionado td{
+    background-color: #AAC6F3;
+}
